# globbing

./: CMakeLists.txt  a.out  check_bracket.c  check_not.c  check_not_range.c  check_range.c  compile_pattern.c  ft_isalpha.c  ft_isdigit.c  ft_strchr.c  ft_strlen.c  ft_strsub.c  get_compiled_size.c  globbing.c  globbing.h  if_backslash.c  if_is_valid_bracket.c  if_star_or_question.c  init_gtoken.c  init_len.c  init_result_compiled.c  init_to_zero.c  is_charset_or_not_charset.c  is_px_less_size.c  is_question.c  is_regular.c  is_star.c  match  utils.c
libft/: libft.h
